<?xml version="1.0" encoding="utf-8"?>
<!--
  Layout principal de l'app.
  S'utilitza ConstraintLayout per posicionar els elements.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_m">

    <!--
      Text principal de benvinguda.
      Style: TitleText (definit a styles.xml)
      Es col·loca centrat horitzontalment i enganxat a la part superior.
    -->
    <TextView
        style="@style/TitleText"
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--
      Botó d'informació.
      Quan es prem, mostra un Toast amb un missatge multilingüe.
      El botó està centrat i situat sota el TextView.
    -->
    <Button
        android:id="@+id/btnInfo"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/btn_max_width"
        android:text="@string/btn_info"
        android:contentDescription="@string/cd_info_button"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_m" />

    <!--
      Botó de sortir.
      Quan es prem, tanca l'activitat (finish()).
      Està centrat i col·locat sota el botó d'informació.
    -->
    <Button
        android:id="@+id/btnExit"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/btn_max_width"
        android:text="@string/btn_exit"
        android:contentDescription="@string/cd_exit_button"
        app:layout_constraintTop_toBottomOf="@id/btnInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_m" />

</androidx.constraintlayout.widget.ConstraintLayout>
